loms/k8s/loms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loms
  namespace: route256
  labels:
    app: loms
spec:
  ports:
    - name: "grpc"
      protocol: TCP
      port: 35000
      targetPort: 35000
  selector:
    app: loms
