loms/k8s/loms/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loms
  namespace: route256
  labels:
    app: loms
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - loms.route256.richardhere.dev
      secretName: certman-loms-route256-richardhere
  rules:
    - host: loms.route256.richardhere.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loms
                port:
                  number: 35000
